Se envolvieron los estilos generales y alineaciones

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
   </head>
   <body>
     <div class="container">
-      <div class="left">
+      <div class="left row-content"> 
         <div class="row">
           <img src="./assets/img/Shower.png" alt="Cloud Image" />
         </div>
-        <div>
-          <div class="row left-row-main" id="principal-temperature">15</div>
-          <div class="row left-row-main" id="principal-temperature-sign">&deg;C</div>
+        <div class="box-row">
+          <div class="left-row-main" id="principal-temperature">15</div>
+          <div class="left-row-sign" id="principal-temperature-sign">&deg;C</div>
         </div>
-        <div class="row left-row-type" id="principal-type">Shower</div>
-        <div class="row">Today - Fri 5 Jun</div>
-        <div class="row">Helsinki</div>
+        <div class="left-row-type" id="principal-type">Shower</div>
+        <div class="left-row" id="date-main">Today - Fri 5 Jun</div>
+        <div class="left-row" id="location">Mérida</div>
       </div>
       <div class="right">
         <div class="temperature-icons">
