Se quitO el String de temperatura del HTML

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <img src="./assets/img/Shower.png" alt="Cloud Image" />
         </div>
         <div class="box-row">
-          <div class="left-row-temperature" id="principal-temperature">15</div>
+          <div class="left-row-temperature" id="principal-temperature"></div>
           <div class="left-row-sign" id="principal-temperature-sign">&deg;C</div>
         </div>
         <div class="left-row-type" id="principal-type">Shower</div>
