adding temp max and min

--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
           <h2>Today's Highlights</h2>
           <div class="highlight-row">
             <div class="highlight-card">
+              <div class="highlight-title">Temp min</div>
+              <div class="highlight-value" id="temperature-min"></div>
+            </div>
+            <div class="highlight-card">
+              <div class="highlight-title">Temp max</div>
+              <div class="highlight-value" id="temperature-max"></div>
+            </div>
+          </div>
+          <div class="highlight-row">
+            <div class="highlight-card">
               <div class="highlight-title">Wind Status</div>
               <div class="highlight-value">7 mph</div>
             </div>
