Se agrego el lugar, la fecha

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <div class="left-row-sign" id="principal-temperature-sign">&deg;C</div>
         </div>
         <div class="left-row-type" id="principal-type">Shower</div>
-        <div class="left-row" id="date-main">Today - Fri 5 Jun</div>
-        <div class="left-row" id="location">Mérida</div>
+        <div class="left-row" id="date-main"></div>
+        <div class="left-row" id="location"></div>
       </div>
       <div class="right">
         <div class="temperature-icons">
@@ -72,6 +72,7 @@
     </div>
 
     <!-- Scripts -->
+    <script src="./js/auxiliar.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
